# mirrage

./: .clang-format  .codedocs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mimir  .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md  clang-format.cmake  copy_recursive.cmake  embed_assets.cmake  embed_recursive_into_asm.cmake  embedded_assets.rc.in  embedded_assets.s.in  globals.cmake
dependencies/: CMakeLists.txt  crunch_interface.cmake  doctest_interface.cmake  glm_interface.cmake  gsl_interface.cmake  imgui_interface.cmake  magic_get_interface.cmake  moodycamel_interface.cmake  nuklear_interface.cmake  plog_interface.cmake  robin-map_interface.cmake  soloud_interface.cmake  soloud_sdl2_static.cpp
dependencies/assimp/: CMakeLists.txt
dependencies/assimp/code/: CMakeLists.txt  glTFExporter.cpp
dependencies/asyncplusplus/: CMakeLists.txt
dependencies/asyncplusplus/include/: async++.h
dependencies/asyncplusplus/include/async++/: task.h
dependencies/asyncplusplus/src/: internal.h  scheduler.cpp  threadpool_scheduler.cpp
dependencies/enet/: CMakeLists.txt  compress.c  unix.c
dependencies/glm/: CMakeLists.txt
dependencies/magic_get/: CMakeLists.txt
dependencies/magic_get/test/precise/: motivating_example.cpp
dependencies/moodycamel/: CMakeLists.txt
dependencies/moodycamel/include/moodycamel/: concurrentqueue.hpp
dependencies/physfs/: .hg_archival.txt  CMakeLists.txt
dependencies/physfs/archivers/: lzma.c  zip.c
dependencies/physfs/platform/: unix.c
dependencies/physfs/zlib123/: deflate.c
dependencies/sdl_vulkan/: .dir-locals.el  .travis.yml  CMakeLists.txt  LICENSE  README.md
dependencies/sdl_vulkan/cmake/: FindSDL2.cmake
dependencies/sdl_vulkan/examples/: CMakeLists.txt  example.c
dependencies/sdl_vulkan/include/: SDL_vulkan.h
dependencies/sdl_vulkan/src/: CMakeLists.txt  SDL_vulkan.c
dependencies/sdl_vulkan/test/: CMakeLists.txt  no_init_1.c  no_init_2.c  test.h
dependencies/sf2/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
dependencies/sf2/include/sf2/: reflection.hpp  reflection_data.hpp  serializer.hpp  sf2.hpp
dependencies/sf2/include/sf2/formats/: json_reader.hpp  (+1 more)
dependencies/sf2/tests/: test_advanced.cpp  test_simple.cpp
dependencies/stb_image/: CMakeLists.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  shaders.cmake
src/demo/src/: game_engine.cpp  game_engine.hpp  main.cpp  menu_screen.cpp  menu_screen.hpp  meta_system.cpp  meta_system.hpp  test_animation_screen.cpp  test_animation_screen.hpp  test_screen.cpp  test_screen.hpp
src/demo/src/systems/: nim_system.cpp  nim_system.hpp
src/mesh_converter/: CMakeLists.txt  animation_parser.cpp  animation_parser.hpp  common.cpp  common.hpp  filesystem.cpp  filesystem.hpp  main.cpp  material_parser.cpp  material_parser.hpp  model_parser.cpp  model_parser.hpp  skeleton_parser.cpp  skeleton_parser.hpp
src/mesh_converter/helper/: console.hpp  progress.cpp  progress.hpp
src/mirrage/: CMakeLists.txt
src/mirrage/asset/: CMakeLists.txt
src/mirrage/asset/src/: aid.cpp  asset_manager.cpp  embedded_asset.cpp  error.cpp  stream.cpp
src/mirrage/audio/: CMakeLists.txt
src/mirrage/audio/src/: audio_manager.cpp  audio_source_comp.cpp  listener_comp.cpp  sound_bank.cpp  sound_effect_system.cpp
src/mirrage/core/: CMakeLists.txt  info.cpp.in  version_info.cmake
src/mirrage/core/src/: engine.cpp  entry_point.cpp  screen.cpp  translation.cpp
src/mirrage/ecs/: CMakeLists.txt
src/mirrage/ecs/src/: component.cpp  ecs.cpp  entity_handle.cpp  entity_manager.cpp  serializer.cpp  types.cpp
src/mirrage/error/: CMakeLists.txt
src/mirrage/error/src/: error.cpp
src/mirrage/graphic/: CMakeLists.txt
src/mirrage/graphic/src/: context.cpp  descriptor_sets.cpp  device.cpp  device_memory.cpp  gl_format.h  ktx_parser.cpp  ktx_parser.hpp  mesh.cpp  pipeline_cache.cpp  profiler.cpp  render_pass.cpp  settings.cpp  streamed_buffer.cpp  swapchain.cpp  texture.cpp  thread_local_command_buffer_pool.cpp  transfer_manager.cpp  vk_format.h  vk_wrapper.cpp  window.cpp
src/mirrage/gui/: CMakeLists.txt
src/mirrage/gui/src/: color_picker.cpp  debug_ui.cpp  gui.cpp  menu.cpp  text_edit.cpp
src/mirrage/info/: CMakeLists.txt  info.cpp.in
src/mirrage/input/: CMakeLists.txt
src/mirrage/input/src/: input_manager.cpp  input_mapping.cpp
src/mirrage/net/: CMakeLists.txt
src/mirrage/net/src/: channel.cpp  client.cpp  common.cpp  error.cpp  message_bridge.cpp  net_manager.cpp  server.cpp
src/mirrage/renderer/: CMakeLists.txt  shaders.cmake
src/mirrage/renderer/assets/: assets_mirrage_renderer_shader.map  assets_mirrage_renderer_textures.map
src/mirrage/renderer/shader/: billboard.frag  billboard.vert  billboard_unlit.frag  blit.frag  bloom_apply.frag  bloom_blur.vert  brdf.glsl  decal.frag  decal.vert  depth_mipgen.frag  depth_of_field_apply.frag  depth_of_field_calc.frag  depth_of_field_coc.frag  gi_ambient_filter.frag  gi_blend.frag  gi_diffuse_reproject.frag  gi_integrate_brdf.frag  gi_reproject.frag  gi_sample.frag  gi_sample_blend.frag  gi_sample_spec.frag  gi_sample_upsample.frag  gi_spec_blur.frag  gi_spec_blur.vert  gi_weight_mipgen.frag  global_uniforms.glsl  light_directional.frag  light_point.vert  luminance_adapt.frag  median.glsl  median_filter.frag  model.frag  model_alphatest.frag  model_emissive.frag  particle.vert  particle.vert_base.glsl  particle_solid.frag  particle_transparent.vert  particle_transparent_base.glsl  particle_transparent_lit.frag  (+14 more)
src/mirrage/renderer/src/: animation.cpp  animation_comp.cpp  animation_data.cpp  billboard.cpp  camera_comp.cpp  debug_ui.hpp  decal.cpp  deferred_renderer.cpp  gbuffer.cpp  light_comp.cpp  loading_system.cpp  model.cpp  model_comp.cpp  object_router.cpp  particle_system.cpp  picking.cpp  render_pass.cpp
src/mirrage/utils/: CMakeLists.txt
src/mirrage/utils/src/: command.cpp  console_command.cpp  defer.cpp  log.cpp  md5.cpp  messagebus.cpp  pool.cpp  purgatory.cpp  reflection.cpp  small_vector.cpp  stacktrace.cpp  types.cpp
src/mirrage/utils/test/: random_uuid_generator.test.cpp
(+512 files in other folders)
