cmake_minimum_required(VERSION 3.2 FATAL_ERROR)

project(mirrage)

add_subdirectory(utils)
add_subdirectory(error)
add_subdirectory(asset)
add_subdirectory(ecs)
add_subdirectory(graphic)
add_subdirectory(input)
add_subdirectory(gui)
add_subdirectory(net)
add_subdirectory(renderer)
add_subdirectory(audio)
add_subdirectory(core)

